--- a/index.html
+++ b/index.html
@@ -407,13 +407,61 @@
       </div>
     </footer>
     <!-- modal window -->
-    <div class="backdrop-window is-hidden" data-modal>
+    <div class="backdrop-window" data-modal>
       <div class="modal-window">
         <button class="modal-window-btn" type="button" data-modal-close>
           <svg class="modal-window-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
+        <form class="contacts-form">
+          <p class="contacts-form-desc">Leave your contacts and we will call you back</p>
+          <label class="contacts-form-field">
+            <p class="contacts-form-field-desc">Name</p>
+            <input
+              class="contacts-form-input"
+              type="text"
+              name="user_name"
+              pattern="[A-Za-zА-Яа-яіІїЇєЄґҐ']+"
+              required
+              title="Alexander"
+            />
+          </label>
+          <label class="contacts-form-field">
+            <p class="contacts-form-field-desc">Phone</p>
+            <input
+              class="contacts-form-input"
+              type="tel"
+              name="user_tel"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="xxx-xxx-xx-xx"
+              required
+            />
+          </label>
+          <label class="contacts-form-field">
+            <p class="contacts-form-field-desc">Email</p>
+            <input class="contacts-form-input" type="email" name="user_email" required />
+          </label>
+          <label class="contacts-form-field">
+            <p class="contacts-form-field-desc">Comment</p>
+            <textarea
+              class="contacts-form-comment"
+              name="user_comment"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="contacts-form-checkbox-label">
+            <input
+              class="contacts-form-checkbox"
+              type="checkbox"
+              name="user_accept_policy"
+              required
+            />
+            I accept the terms and conditions of the
+            <a href="" class="contacts-form-link">Privacy Policy</a>
+          </label>
+          <button class="contacts-form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
