--- a/index.html
+++ b/index.html
@@ -418,29 +418,44 @@
           <p class="contacts-form-desc">Leave your contacts and we will call you back</p>
           <label class="contacts-form-field">
             <p class="contacts-form-field-desc">Name</p>
-            <input
-              class="contacts-form-input"
-              type="text"
-              name="user_name"
-              pattern="[A-Za-zА-Яа-яіІїЇєЄґҐ']+"
-              required
-              title="Alexander"
-            />
+            <span class="contacts-form-input-wrapper">
+              <input
+                class="contacts-form-input"
+                type="text"
+                name="user_name"
+                pattern="[A-Za-zА-Яа-яіІїЇєЄґҐ']+"
+                required
+                title="Alexander"
+              />
+              <svg class="contacts-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-user-icon"></use>
+              </svg>
+            </span>
           </label>
           <label class="contacts-form-field">
             <p class="contacts-form-field-desc">Phone</p>
-            <input
-              class="contacts-form-input"
-              type="tel"
-              name="user_tel"
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-              required
-            />
+            <span class="contacts-form-input-wrapper">
+              <input
+                class="contacts-form-input"
+                type="tel"
+                name="user_tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="contacts-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-modal-icon"></use>
+              </svg>
+            </span>
           </label>
           <label class="contacts-form-field">
             <p class="contacts-form-field-desc">Email</p>
-            <input class="contacts-form-input" type="email" name="user_email" required />
+            <span class="contacts-form-input-wrapper">
+              <input class="contacts-form-input" type="email" name="user_email" required />
+              <svg class="contacts-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-modal-icon"></use>
+              </svg>
+            </span>
           </label>
           <label class="contacts-form-field">
             <p class="contacts-form-field-desc">Comment</p>
@@ -457,6 +472,9 @@
               name="user_accept_policy"
               required
             />
+            <svg class="contacts-form-own-checkbox" width="16" height="16">
+              <use href="./images/icons.svg#icon-checkmark-icon"></use>
+            </svg>
             I accept the terms and conditions of the
             <a href="" class="contacts-form-link">Privacy Policy</a>
           </label>
