--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <svg class="contacts-form-own-checkbox" width="16" height="16">
               <use href="./images/icons.svg#icon-checkmark-icon"></use>
             </svg>
-            I accept the terms and conditions of the
+            I accept the terms and conditions of the&nbsp;
             <a href="" class="contacts-form-link">Privacy Policy</a>
           </label>
           <button class="contacts-form-btn" type="submit">Send</button>
