--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       </div>
     </footer>
     <!-- modal window -->
-    <div class="backdrop-window" data-modal>
+    <div class="backdrop-window is-hidden" data-modal>
       <div class="modal-window">
         <button class="modal-window-btn" type="button" data-modal-close>
           <svg class="modal-window-icon" width="8" height="8">
