--- a/index.html
+++ b/index.html
@@ -414,10 +414,10 @@
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
+        <p class="contacts-form-desc">Leave your contacts and we will call you back</p>
         <form class="contacts-form">
-          <p class="contacts-form-desc">Leave your contacts and we will call you back</p>
           <label class="contacts-form-field">
-            <p class="contacts-form-field-desc">Name</p>
+            <span class="contacts-form-field-desc">Name</span>
             <span class="contacts-form-input-wrapper">
               <input
                 class="contacts-form-input"
@@ -433,7 +433,7 @@
             </span>
           </label>
           <label class="contacts-form-field">
-            <p class="contacts-form-field-desc">Phone</p>
+            <span class="contacts-form-field-desc">Phone</span>
             <span class="contacts-form-input-wrapper">
               <input
                 class="contacts-form-input"
@@ -449,7 +449,7 @@
             </span>
           </label>
           <label class="contacts-form-field">
-            <p class="contacts-form-field-desc">Email</p>
+            <span class="contacts-form-field-desc">Email</span>
             <span class="contacts-form-input-wrapper">
               <input class="contacts-form-input" type="email" name="user_email" required />
               <svg class="contacts-form-input-icon" width="18" height="18">
@@ -458,7 +458,7 @@
             </span>
           </label>
           <label class="contacts-form-field">
-            <p class="contacts-form-field-desc">Comment</p>
+            <span class="contacts-form-field-desc">Comment</span>
             <textarea
               class="contacts-form-comment"
               name="user_comment"
