--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
         </button>
         <p class="contacts-form-desc">Leave your contacts and we will call you back</p>
         <form class="contacts-form">
-          <label class="contacts-form-field">
-            <span class="contacts-form-field-desc">Name</span>
-            <span class="contacts-form-input-wrapper">
+          <div class="contacts-form-wrapper">
+            <label class="contacts-form-field" for="user-name">Name</label>
+            <div class="contacts-form-input-wrapper">
               <input
                 class="contacts-form-input"
                 type="text"
@@ -426,33 +426,37 @@
                 pattern="[A-Za-zА-Яа-яіІїЇєЄґҐ']+"
                 required
                 title="Alexander"
+                id="user-name"
               />
-              <svg class="contacts-form-input-icon" width="18" height="18">
+              <svg class="contacts-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user-icon"></use>
               </svg>
-            </span>
-          </label>
-          <label class="contacts-form-field">
-            <span class="contacts-form-field-desc">Phone</span>
-            <span class="contacts-form-input-wrapper">
+            </div>
+          </div>
+
+          <div class="contacts-form-wrapper">
+            <label class="contacts-form-field" for="phone-number">Phone</label>
+            <div class="contacts-form-input-wrapper">
               <input
                 class="contacts-form-input"
                 type="tel"
                 name="user_tel"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
+                id="phone-number"
                 required
               />
-              <svg class="contacts-form-input-icon" width="18" height="18">
+              <svg class="contacts-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-modal-icon"></use>
               </svg>
-            </span>
-          </label>
+            </div>
+          </div>
+
           <label class="contacts-form-field">
             <span class="contacts-form-field-desc">Email</span>
             <span class="contacts-form-input-wrapper">
               <input class="contacts-form-input" type="email" name="user_email" required />
-              <svg class="contacts-form-input-icon" width="18" height="18">
+              <svg class="contacts-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-modal-icon"></use>
               </svg>
             </span>
