--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               <input
                 class="contacts-form-input"
                 type="text"
-                name="user_name"
+                name="user-name"
                 pattern="[A-Za-zА-Яа-яіІїЇєЄґҐ']+"
                 required
                 title="Alexander"
@@ -440,7 +440,7 @@
               <input
                 class="contacts-form-input"
                 type="tel"
-                name="user_tel"
+                name="phone-number"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
                 id="phone-number"
@@ -452,36 +452,48 @@
             </div>
           </div>
 
-          <label class="contacts-form-field">
-            <span class="contacts-form-field-desc">Email</span>
-            <span class="contacts-form-input-wrapper">
-              <input class="contacts-form-input" type="email" name="user_email" required />
+          <div class="contacts-form-wrapper">
+            <label class="contacts-form-field" for="user-email">Email</label>
+            <div class="contacts-form-input-wrapper">
+              <input
+                class="contacts-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                required
+              />
               <svg class="contacts-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-modal-icon"></use>
               </svg>
-            </span>
-          </label>
-          <label class="contacts-form-field">
-            <span class="contacts-form-field-desc">Comment</span>
+            </div>
+          </div>
+
+          <div class="contacts-textarea-wrapper">
+            <label class="contacts-form-field" for="user-comment">Comment</label>
             <textarea
               class="contacts-form-comment"
               name="user_comment"
               placeholder="Text input"
+              id="user-comment"
+              name="user-comment"
             ></textarea>
-          </label>
-          <label class="contacts-form-checkbox-label">
+          </div>
+
+          <div class="contacts-checkbox-wrapper">
             <input
               class="contacts-form-checkbox"
               type="checkbox"
               name="user_accept_policy"
               required
             />
+            <label class="contacts-form-checkbox-label">
+              I accept the terms and conditions of the&nbsp;
+              <a href="" class="contacts-form-link">Privacy Policy</a>
+            </label>
             <svg class="contacts-form-own-checkbox" width="16" height="16">
               <use href="./images/icons.svg#icon-checkmark-icon"></use>
             </svg>
-            I accept the terms and conditions of the&nbsp;
-            <a href="" class="contacts-form-link">Privacy Policy</a>
-          </label>
+          </div>
           <button class="contacts-form-btn" type="submit">Send</button>
         </form>
       </div>
