--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-socials-container">
           <p class="footer-socials-text">Social media</p>
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
@@ -490,7 +490,6 @@
             <label class="contacts-form-field" for="user-comment">Comment</label>
             <textarea
               class="contacts-form-comment"
-              name="user_comment"
               placeholder="Text input"
               id="user-comment"
               name="user-comment"
