need-to-add-portfolio

--- a/index.html
+++ b/index.html
@@ -506,13 +506,13 @@
               required
             />
             <label class="contacts-form-checkbox-label" for="user-privacy">
-              I accept the terms and conditions of the&nbsp;
-              <a href="" class="contacts-form-link">Privacy Policy</a>
               <span class="form-checkbox-icon-wrapper">
                 <svg class="contacts-form-own-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkmark-icon"></use>
                 </svg>
               </span>
+              I accept the terms and conditions of the
+              <a href="" class="contacts-form-link">Privacy Policy</a>
             </label>
           </div>
           <button class="contacts-form-btn" type="submit">Send</button>
