--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,7 @@
             growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-socials-container">
           <p class="footer-socials-text">Social media</p>
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
@@ -299,6 +299,24 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-input-wrapper">
+          <p class="footer-input-desc">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                name="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">
+              Subscribe<svg class="footer-form-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-paper-plane-icon"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
